fix style displaying on IOS Safari

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -12,6 +12,7 @@
     display: block;
     width: 100vw;
     height: 100vh;
+    height: -webkit-fill-available;
     position: fixed;
     left: 0;
     top: 0;
